
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






typedef scalar_t__ time_t ;
struct tm {int tm_sec; int tm_year; int tm_mon; int tm_mday; int tm_hour; int tm_min; int tm_isdst; } ;


 int ATOI2 (char*) ;
 int die () ;
 int isdigit (unsigned char) ;
 struct tm* localtime (scalar_t__*) ;
 scalar_t__ mktime (struct tm*) ;
 int strlen (char*) ;
 scalar_t__ time (scalar_t__*) ;

__attribute__((used)) static time_t
ttime(char *arg)
{
    time_t now, then;
    struct tm *lt;
    int yearset;
    char *dot, *p;

    if (time(&now) == (time_t)-1 || (lt = localtime(&now)) == ((void*)0))
        die();


    for (p = arg, dot = ((void*)0); *p != '\0'; p++) {
        if (*p == '.' && dot == ((void*)0))
            dot = p;
        else if (!isdigit((unsigned char)*p))
            goto terr;
    }
    if (dot == ((void*)0))
        lt->tm_sec = 0;
    else {
        *dot++ = '\0';
        if (strlen(dot) != 2)
            goto terr;
        lt->tm_sec = ATOI2(dot);
        if (lt->tm_sec > 61)
            goto terr;
    }

    yearset = 0;
    switch(strlen(arg)) {
    case 12:
        lt->tm_year = ATOI2(arg) * 100;
        lt->tm_year -= 1900;
        yearset = 1;

    case 10:
        if (yearset) {
            yearset = ATOI2(arg);
            lt->tm_year += yearset;
        } else {
            yearset = ATOI2(arg);

            lt->tm_year = yearset;
            if (yearset < 69)
                lt->tm_year += 100;
        }

    case 8:
        lt->tm_mon = ATOI2(arg);
        if (lt->tm_mon > 12 || lt->tm_mon == 0)
            goto terr;
        --lt->tm_mon;
        lt->tm_mday = ATOI2(arg);
        if (lt->tm_mday > 31 || lt->tm_mday == 0)
            goto terr;
        lt->tm_hour = ATOI2(arg);
        if (lt->tm_hour > 23)
            goto terr;
        lt->tm_min = ATOI2(arg);
        if (lt->tm_min > 59)
            goto terr;
        break;
    default:
        goto terr;
    }

    lt->tm_isdst = -1;
    then = mktime(lt);
    if (then == (time_t)-1) {
    terr:
        die();
    }
    if (then < now)
        die();
    return (then);
}
